# open-llm-code

./: .gitignore  Cargo.toml  DEVELOPMENT.md  HUGGINGFACE.md  README.md
config/: config.example.toml
scripts/: install.sh
src/: error.rs  main.rs  types.rs
src/config/: mod.rs
src/llm/: anthropic.rs  huggingface.rs  mod.rs  ollama.rs  types.rs
src/mcp/: client.rs  manager.rs  mod.rs  types.rs
